# SDL2-Vulkan-Game-Engine

./: .gitignore
Box2D/: CMakeLists.txt
DesignerApp/: CMakeLists.txt  DesignerApp.code-workspace
DesignerApp/source/: CMakeLists.txt
HugesWhoSlots/: CMakeLists.txt
HugesWhoSlots/source/: CMakeLists.txt
PachinkoChallenge/: CMakeLists.txt  PachinkoChallenge.code-workspace
PachinkoChallenge/data/objects/: camera.lst
PachinkoChallenge/data/scripts/: scriptListTable.lst
PachinkoChallenge/data/settings/: controllerMapping.cfg  settings.cfg  settings.json
PachinkoChallenge/data/shaders/: pipeline.cfg
PachinkoChallenge/source/: CMakeLists.txt
PachinkoChallenge/source/game/: game.cpp  game.h  main.cpp
angelscript/: CMakeLists.txt
angelscript/add_on/autowrapper/: aswrappedcall.h
bulletPhysics/: CMakeLists.txt
c_consoleTestApp/: Makefile  c_consoleTestApp  main.c  point.c  point.h
cmakeTutoral/: CMakeLists.txt  cmakeTutorial.code-workspace
cmakeTutoral/source/: Tutorial.cpp
cmakeTutoralLib/: CMakeLists.txt  library.cpp  library.h
consoleSimpleApp/: CMakeLists.txt  consoleSimpleApp.code-workspace
consoleSimpleApp/consoleSimpleApp/: CMakeLists.txt  consoleSimpleApp.cpp
consoleTestAp/: CMakeLists.txt  consoleTestAp.code-workspace
consoleTestAp/consoleTestAp/: CMakeLists.txt  consoleTestAp.cpp
cpp_consoleTestApp/: Makefile  classtemplate.cpp  classtemplate.hpp  cpp_consoleTestApp  main.cpp  point.c  point.h  point.hpp
gameTemplate/: CMakeLists.txt  gametemplate.code-workspace
gameTemplate/data/settings/: controllerMapping.cfg  settings.cfg  settings.json
gameTemplate/data/shaders/: compile Vulkan shaders.txt  mesh.vert  mesh_vert.spv  pipeline.cfg  quad.frag  quad.vert  quad_frag.spv  quad_no_txt.frag  quad_no_txt_frag.spv  quad_spritesheet.vert  quad_spritesheet_vert.spv  quad_vert.spv  shader.cfg  vert.spv  vulkanTriangle.vert  vulkanTriangleFrag2.spv  vulkanTriangleVert5.spv
gameTemplate/data/sound/: effectsSound.lst  menuSound.lst
gameTemplate/source/: CMakeLists.old  CMakeLists.txt
gameTemplate/source/ai/: ballai.cpp  ballai.h
gameTemplate/source/game/: game.cpp  game.h  main.cpp
gameTemplate/source/smartGUI/: smartapplysettingsbtn.cpp  smartapplysettingsbtn.h  smartconfirmbtn.cpp  smartdeadzoneslider.cpp  smartdeadzoneslider.h  smartfullscreencheckbox.cpp  smartkeybindbtn.cpp  smartkeybindbtn.h  smartresetkeybind.cpp  smartresolutionbtn.cpp  smartresolutionbtn.h  smartsettingsmenubtn.cpp  smartvsynccheckbox.cpp  smartvsynccheckbox.h
gameTemplate/source/state/: commonstate.cpp  commonstate.h  gamedefs.h  igamestate.h  level1state.cpp  level1state.h  loadstate.cpp  loadstate.h  runstate.cpp  runstate.h  startupstate.cpp  startupstate.h  statedefs.h  statemessage.h  titlescreenstate.cpp  titlescreenstate.h
invaders/: CMakeLists.txt
invaders/data/objects/: camera.lst
invaders/data/settings/: settings.json
invaders/data/shaders/: pipeline.cfg
invaders/source/game/: game.cpp  game.h  main.cpp
invaders/source/state/: commonstate.cpp  level1state.cpp  level1state.h  loadstate.cpp  startupstate.cpp  titlescreenstate.cpp
obsolete/: actordata.h  actorsprite2d.cpp  basegame.cpp  basegame.h  basestrategy.cpp  basestrategy.h  build_defs.cpp  cameradata.cpp  cameradata.h  cameramanager.cpp  istrategy.cpp  linearstagestrategy.cpp  loopstagestrategy.cpp  object2d.cpp  object2d.h  object3d.cpp  object3d.h  objecttransform.cpp  objecttransform.h  scriptcameramanager.cpp  scriptinode.cpp  scriptinode.h  scriptplaylist.h  scriptstrategymanager.cpp  sector.cpp  sector.h  shaderdata.cpp  shadermanager.cpp  signalmanager.cpp  signalmanager.h  spritedatacontainer.cpp  stagestrategy.cpp  stagestrategy.h  tagparser.cpp  tagparser.h  uicontroldefs.as  uicontroldefs.h
obsolete/ai/: ballai.cpp
obsolete/slot/: animatedcycleresults.h  basegamemusic.h  ifrontpanel.h  igamemusic.h  mathsymbol.h  pay.h  paycombo.h  paylineset.h  reelgroupview.cpp  reelgroupview.h  reelstripview.cpp  simplecycleresults.cpp  simplecycleresults.h  slotgame.h  slotgroup.h  slotgroupmodel.h  slotgroupview.cpp  slotmath.h  slotmathmanager.h  slotresults.h  stripset.h  symbol2d.cpp  symbol2d.h  symbolposition.h  symbolsetviewmanager.h  valuetable.h  weightedtable.h  wheelgroupview.cpp  wheelgroupview.h
obsolete/smartGUI/: smartconfirmbtn.h  smartfullscreencheckbox.cpp  smartfullscreencheckbox.h  smartkeybindbtn.cpp  smartresetkeybind.h  smartsettingsmenubtn.h  smartvsynccheckbox.cpp
org.howiesfunware.PachinkoChallenge/: local.properties
org.howiesfunware.PachinkoChallenge/app/: build.gradle
org.howiesfunware.PachinkoChallenge/app/jni/: Application.mk
org.howiesfunware.PachinkoChallenge/gradle/wrapper/: gradle-wrapper.properties
org.howiesfunware.template/: local.properties
org.howiesfunware.template/app/: build.gradle
org.howiesfunware.template/app/jni/: Application.mk
org.howiesfunware.template/gradle/wrapper/: gradle-wrapper.properties
org.lapcatgames.template/: local.properties
org.lapcatgames.template/app/: build.gradle
org.lapcatgames.template/app/jni/: Application.mk  SDL2_mixer
org.lapcatgames.template/gradle/wrapper/: gradle-wrapper.properties
resume/: Howard_C_Rosenorn_reusme.doc  Howard_C_Rosenorn_reusme.docx  Howard_C_Rosenorn_reusme.odt
scriptGameTemplate/: CMakeLists.txt  scriptGameTemplate.code-workspace
scriptGameTemplate/data/scripts/: scriptListTable.lst
scriptGameTemplate/data/settings/: settings.cfg  settings.json
scriptGameTemplate/data/shaders/: pipeline.cfg
scriptGameTemplate/source/: CMakeLists.txt
scriptGameTemplate/source/game/: game.cpp  game.h  main.cpp
scriptGameTestEnvironment/: CMakeLists.txt  scriptGameTestEnvironment.code-workspace
scriptGameTestEnvironment/data/scripts/: scriptListTable.lst
scriptGameTestEnvironment/data/settings/: controllerMapping.cfg  settings.json
scriptGameTestEnvironment/nbproject/: configurations.xml  project.xml
scriptGameTestEnvironment/source/: CMakeLists.txt
testApp/: CMakeLists.txt
tools/: classtemplate.cpp  classtemplate.h
(+315 files in other folders)
